--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+body{
+  font-family: 'Poppins', sans-serif;
 }
+/* .App {
+  text-align: center;
+} */
 
 .App-logo {
   height: 40vmin;
