--- a/src/Components/Products/Product.css
+++ b/src/Components/Products/Product.css
@@ -1,27 +1,40 @@
-/* .productSection{
-    width: 85%;
-    background-color: #fff;
-    box-shadow: 2px 2px 30px rgba(167, 158, 245, 0.2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 30px auto;
-    padding: 40px 20px;
-    margin-top: -60px;
+/*
+Button
+*/
+.btn1 {
+    padding: 0.8em 1.8em;
+    border: 2px solid #17C3B2;
     position: relative;
-    background-size: 1000px;
-    border-radius: 10px;
-} */
-
-
-/* .productBox{
-    width: 250px;
-    height: 330px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 8px;
-    position: relative;
-    margin: 10px 30px;
-} */
+    overflow: hidden;
+    background-color: transparent;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: bold;
+    transition: .3s;
+    z-index: 1;
+    font-family: inherit;
+    color: #17C3B2;
+   }
+   
+   .btn1::before {
+    content: '';
+    width: 0;
+    height: 300%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    background: #17C3B2;
+    transition: .5s ease;
+    display: block;
+    z-index: -1;
+   }
+   
+   .btn1:hover::before {
+    width: 105%;
+   }
+   
+   .btn1:hover {
+    color: white;
+   }
