home compo create

--- a/src/Components/Products/Product.css
+++ b/src/Components/Products/Product.css
@@ -38,3 +38,23 @@ Button
    .btn1:hover {
     color: white;
    }
+
+/*
+Button Animation
+*/
+.cardBox{
+   position: relative;
+
+}
+.cardBox .btn1{
+   position: absolute;
+   bottom: -15px;
+   left: 30%;
+   opacity: 0;
+   transition:  0.5s, opacity 0.5s;
+}
+
+.cardBox:hover .btn1{
+   bottom: 30px;
+    opacity: 1;
+}
